--- a/examples/notebooks/example_6_data_loading.ipynb
+++ b/examples/notebooks/example_6_data_loading.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,15 @@
     "import pandas as pd\n",
     "import scipy as sc\n",
     "\n",
-    "from hcga.graph import Graph, GraphCollection\n"
+    "from hcga.graph import Graph, GraphCollection\n",
+    "\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "if not Path(\"datasets\").exists():\n",
+    "    os.mkdir(\"datasets\")\n",
+    "if not Path(\"results\").exists():\n",
+    "    os.mkdir(\"results\")"
    ]
   },
   {
@@ -34,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,28 +67,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 3 graphs\n",
-      "There graph ids are: [0, 1, 2]\n",
-      "There are 0 features per node\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('There are {} graphs'.format(len(gc.graphs)))\n",
-    "print('There graph ids are: {}'.format(gc.get_graph_ids()))\n",
-    "print('There are {} features per node'.format(gc.get_n_node_features()))"
+    "print(\"There are {} graphs\".format(len(gc.graphs)))\n",
+    "print(\"There graph ids are: {}\".format(gc.get_graph_ids()))\n",
+    "print(\"There are {} features per node\".format(gc.get_n_node_features()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,21 +89,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 4 graphs\n",
-      "There are 0 features per node\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('There are {} graphs'.format(len(gc.graphs)))\n",
-    "print('There are {} features per node'.format(gc.get_n_node_features()))"
+    "print(\"There are {} graphs\".format(len(gc.graphs)))\n",
+    "print(\"There are {} features per node\".format(gc.get_n_node_features()))"
    ]
   },
   {
@@ -117,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,17 +119,17 @@
     "graphs = [graph_1, graph_2, graph_3]\n",
     "\n",
     "# node_features - two features: an all zeros feature and all ones feature\n",
-    "node_features_graph_1 = np.array([np.zeros(len(graph_1)),np.ones(len(graph_1))]).T\n",
-    "node_features_graph_2 = np.array([np.zeros(len(graph_2)),np.ones(len(graph_2))]).T\n",
-    "node_features_graph_3 = np.array([np.zeros(len(graph_3)),np.ones(len(graph_3))]).T\n",
+    "node_features_graph_1 = np.array([np.zeros(len(graph_1)), np.ones(len(graph_1))]).T\n",
+    "node_features_graph_2 = np.array([np.zeros(len(graph_2)), np.ones(len(graph_2))]).T\n",
+    "node_features_graph_3 = np.array([np.zeros(len(graph_3)), np.ones(len(graph_3))]).T\n",
     "\n",
     "# combine node features into list\n",
-    "node_features = [node_features_graph_1,node_features_graph_2,node_features_graph_3]\n"
+    "node_features = [node_features_graph_1, node_features_graph_2, node_features_graph_3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,52 +139,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 3 graphs\n",
-      "There are 2 features per node\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('There are {} graphs'.format(len(gc.graphs)))\n",
-    "print('There are {} features per node'.format(gc.get_n_node_features()))"
+    "print(\"There are {} graphs\".format(len(gc.graphs)))\n",
+    "print(\"There are {} features per node\".format(gc.get_n_node_features()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# lets add another graph\n",
     "graph_4 = nx.les_miserables_graph()\n",
-    "node_features_graph_4 = np.array([np.zeros(len(graph_4)),np.ones(len(graph_4))]).T\n",
+    "node_features_graph_4 = np.array([np.zeros(len(graph_4)), np.ones(len(graph_4))]).T\n",
     "gc.add_graph(graph_4, node_features_graph_4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 4 graphs\n",
-      "There are 2 features per node\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('There are {} graphs'.format(len(gc.graphs)))\n",
-    "print('There are {} features per node'.format(gc.get_n_node_features()))"
+    "print(\"There are {} graphs\".format(len(gc.graphs)))\n",
+    "print(\"There are {} features per node\".format(gc.get_n_node_features()))"
    ]
   },
   {
@@ -207,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,12 +191,12 @@
     "graphs = [graph_1, graph_2, graph_3]\n",
     "\n",
     "# define graph labels\n",
-    "labels = [0,1,1]\n"
+    "labels = [0, 1, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,21 +206,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 3 graphs\n",
-      "There are 0 features per node\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('There are {} graphs'.format(len(gc.graphs)))\n",
-    "print('There are {} features per node'.format(gc.get_n_node_features()))"
+    "print(\"There are {} graphs\".format(len(gc.graphs)))\n",
+    "print(\"There are {} features per node\".format(gc.get_n_node_features()))"
    ]
   },
   {
@@ -261,14 +223,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# creating some random numpy arrays as adjacency matrices\n",
-    "graph_1 = np.random.randint(2, size=(10,10))\n",
-    "graph_2 = np.random.randint(2, size=(10,10))\n",
-    "graph_3 = np.random.randint(2, size=(10,10))\n",
+    "graph_1 = np.random.randint(2, size=(10, 10))\n",
+    "graph_2 = np.random.randint(2, size=(10, 10))\n",
+    "graph_3 = np.random.randint(2, size=(10, 10))\n",
     "\n",
     "\n",
     "# combine into list\n",
@@ -276,20 +238,20 @@
     "\n",
     "\n",
     "# node_features - two features: an all zeros feature and all ones feature\n",
-    "node_features_graph_1 = np.array([np.zeros(len(graph_1)),np.ones(len(graph_1))]).T\n",
-    "node_features_graph_2 = np.array([np.zeros(len(graph_2)),np.ones(len(graph_2))]).T\n",
-    "node_features_graph_3 = np.array([np.zeros(len(graph_3)),np.ones(len(graph_3))]).T\n",
+    "node_features_graph_1 = np.array([np.zeros(len(graph_1)), np.ones(len(graph_1))]).T\n",
+    "node_features_graph_2 = np.array([np.zeros(len(graph_2)), np.ones(len(graph_2))]).T\n",
+    "node_features_graph_3 = np.array([np.zeros(len(graph_3)), np.ones(len(graph_3))]).T\n",
     "\n",
     "# combine node features into list\n",
-    "node_features = [node_features_graph_1,node_features_graph_2,node_features_graph_3]\n",
+    "node_features = [node_features_graph_1, node_features_graph_2, node_features_graph_3]\n",
     "\n",
     "# define graph labels\n",
-    "labels = [0,1,1]"
+    "labels = [0, 1, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,21 +261,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 3 graphs\n",
-      "There are 2 features per node\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('There are {} graphs'.format(len(gc.graphs)))\n",
-    "print('There are {} features per node'.format(gc.get_n_node_features()))"
+    "print(\"There are {} graphs\".format(len(gc.graphs)))\n",
+    "print(\"There are {} features per node\".format(gc.get_n_node_features()))"
    ]
   },
   {
@@ -325,14 +278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# creating some random numpy arrays as adjacency matrices\n",
-    "graph_1 = np.random.randint(2, size=(10,10))\n",
-    "graph_2 = np.random.randint(2, size=(10,10))\n",
-    "graph_3 = np.random.randint(2, size=(10,10))\n",
+    "graph_1 = np.random.randint(2, size=(10, 10))\n",
+    "graph_2 = np.random.randint(2, size=(10, 10))\n",
+    "graph_3 = np.random.randint(2, size=(10, 10))\n",
     "\n",
     "\n",
     "# combine into list\n",
@@ -340,54 +293,37 @@
     "\n",
     "\n",
     "# node_features - two features: an all zeros feature and all ones feature\n",
-    "node_features_graph_1 = np.array([np.zeros(len(graph_1)),np.ones(len(graph_1))]).T\n",
-    "node_features_graph_2 = np.array([np.zeros(len(graph_2)),np.ones(len(graph_2))]).T\n",
-    "node_features_graph_3 = np.array([np.zeros(len(graph_3)),np.ones(len(graph_3))]).T\n",
+    "node_features_graph_1 = np.array([np.zeros(len(graph_1)), np.ones(len(graph_1))]).T\n",
+    "node_features_graph_2 = np.array([np.zeros(len(graph_2)), np.ones(len(graph_2))]).T\n",
+    "node_features_graph_3 = np.array([np.zeros(len(graph_3)), np.ones(len(graph_3))]).T\n",
     "\n",
     "# combine node features into list\n",
-    "node_features = [node_features_graph_1,node_features_graph_2,node_features_graph_3]\n",
+    "node_features = [node_features_graph_1, node_features_graph_2, node_features_graph_3]\n",
     "\n",
     "# define graph labels\n",
-    "labels = [0,1,1]\n",
+    "labels = [0, 1, 1]\n",
     "\n",
     "gc = GraphCollection()\n",
-    "gc.add_graph_list(graphs, node_features, graph_labels=labels, graph_type='directed')"
+    "gc.add_graph_list(graphs, node_features, graph_labels=labels, graph_type=\"directed\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 3 graphs\n",
-      "There are 2 features per node\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('There are {} graphs'.format(len(gc.graphs)))\n",
-    "print('There are {} features per node'.format(gc.get_n_node_features()))"
+    "print(\"There are {} graphs\".format(len(gc.graphs)))\n",
+    "print(\"There are {} features per node\".format(gc.get_n_node_features()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " The graph type is: directed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(' The graph type is: {}'.format(gc.graphs[0].graph_type))"
+    "print(\" The graph type is: {}\".format(gc.graphs[0].graph_type))"
    ]
   },
   {
@@ -399,13 +335,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# we can save this if we want to and run everything from the command line\n",
     "from hcga.io import save_dataset\n",
-    "save_dataset(gc, 'custom_dataset', folder='./datasets/custom_dataset')\n"
+    "\n",
+    "save_dataset(gc, \"custom_dataset\", folder=\"./datasets/custom_dataset\")"
    ]
   },
   {
@@ -417,20 +354,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from hcga.io import load_dataset\n",
-    "gc = load_dataset(filename='./datasets/custom_dataset/custom_dataset.pkl')\n"
+    "\n",
+    "gc = load_dataset(filename=\"./datasets/custom_dataset/custom_dataset.pkl\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -449,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
