--- a/examples/notebooks/example_4_predict_unseen_graphs.ipynb
+++ b/examples/notebooks/example_4_predict_unseen_graphs.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,15 @@
     "import networkx as nx\n",
     "import pandas as pd\n",
     "from hcga.io import save_dataset\n",
-    "from hcga.graph import Graph, GraphCollection\n"
+    "from hcga.graph import Graph, GraphCollection\n",
+    "\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "if not Path(\"datasets\").exists():\n",
+    "    os.mkdir(\"datasets\")\n",
+    "if not Path(\"results\").exists():\n",
+    "    os.mkdir(\"results\")"
    ]
   },
   {
@@ -33,18 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this cell is generating some synthetic graph dataset with node features. \n",
+    "# this cell is generating some synthetic graph dataset with node features.\n",
     "\n",
     "\n",
-    "#defining limits on number of nodes\n",
+    "# defining limits on number of nodes\n",
     "n_min = 20\n",
     "n_max = 50\n",
     "\n",
-    "#number of graphs\n",
+    "# number of graphs\n",
     "num_g = 100\n",
     "\n",
     "# number of node features - in this example I will generate random node features that aren't useful for classifcation\n",
@@ -62,24 +70,24 @@
     "p_max = 0.5\n",
     "\n",
     "# adding 50 random graphs (label 0)\n",
-    "for i in range(int(num_g/2)):\n",
-    "    rand_n = np.random.randint(n_min,n_max)\n",
-    "    rand_p = np.random.randint(int(p_min*100),int(p_max*100))/100   \n",
-    "    \n",
-    "    g = nx.fast_gnp_random_graph(rand_n,rand_p)    \n",
+    "for i in range(int(num_g / 2)):\n",
+    "    rand_n = np.random.randint(n_min, n_max)\n",
+    "    rand_p = np.random.randint(int(p_min * 100), int(p_max * 100)) / 100\n",
+    "\n",
+    "    g = nx.fast_gnp_random_graph(rand_n, rand_p)\n",
     "    g.label = 0\n",
     "\n",
-    "    node_feat_matrix = np.random.random((rand_n,n_nf))\n",
+    "    node_feat_matrix = np.random.random((rand_n, n_nf))\n",
     "\n",
-    "    for i,node in enumerate(g.nodes):\n",
-    "        g.nodes[node]['features'] = node_feat_matrix[i,:]\n",
-    "    \n",
-    "    #graphs.append(g)\n",
-    "    \n",
-    "    graphs.append(nx.to_numpy_array(g)*2)\n",
-    "    \n",
+    "    for i, node in enumerate(g.nodes):\n",
+    "        g.nodes[node][\"features\"] = node_feat_matrix[i, :]\n",
+    "\n",
+    "    # graphs.append(g)\n",
+    "\n",
+    "    graphs.append(nx.to_numpy_array(g) * 2)\n",
+    "\n",
     "    node_features.append(node_feat_matrix)\n",
-    "    \n",
+    "\n",
     "    labels.append(0)\n",
     "\n",
     "# setting limits on number of edges to add per node\n",
@@ -87,22 +95,22 @@
     "m_max = 5\n",
     "\n",
     "# adding 50  powerlaw cluster graphs (label 1)\n",
-    "for i in range(int(num_g/2)):\n",
-    "    rand_n = np.random.randint(n_min,n_max)\n",
-    "    rand_p = np.random.randint(int(p_min*100),int(p_max*100))/100   \n",
-    "    rand_m = np.random.randint(m_min,m_max)\n",
-    "    \n",
+    "for i in range(int(num_g / 2)):\n",
+    "    rand_n = np.random.randint(n_min, n_max)\n",
+    "    rand_p = np.random.randint(int(p_min * 100), int(p_max * 100)) / 100\n",
+    "    rand_m = np.random.randint(m_min, m_max)\n",
+    "\n",
     "    g = nx.powerlaw_cluster_graph(rand_n, rand_m, rand_p)\n",
     "    g.label = 1\n",
     "\n",
-    "    node_feat_matrix = np.random.random((rand_n,n_nf))\n",
-    "    \n",
-    "    for i,node in enumerate(g.nodes):\n",
-    "        g.nodes[node]['features'] = node_feat_matrix[i,:]\n",
-    "        \n",
-    "    #graphs.append(g)\n",
-    "    \n",
-    "    graphs.append(nx.to_numpy_array(g)*2)\n",
+    "    node_feat_matrix = np.random.random((rand_n, n_nf))\n",
+    "\n",
+    "    for i, node in enumerate(g.nodes):\n",
+    "        g.nodes[node][\"features\"] = node_feat_matrix[i, :]\n",
+    "\n",
+    "    # graphs.append(g)\n",
+    "\n",
+    "    graphs.append(nx.to_numpy_array(g) * 2)\n",
     "    node_features.append(node_feat_matrix)\n",
     "\n",
     "    labels.append(1)"
@@ -110,30 +118,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 100 graphs\n",
-      "There are 3 features per node\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from hcga.graph import Graph, GraphCollection\n",
     "\n",
     "# create graph collection object\n",
     "graphs_labelled = GraphCollection()\n",
-    "graphs_labelled.add_graph_list(graphs,node_features,labels)\n",
+    "graphs_labelled.add_graph_list(graphs, node_features, labels)\n",
     "\n",
-    "save_dataset(graphs_labelled, 'custom_dataset_classification_labelled', folder='./datasets')\n",
+    "save_dataset(\n",
+    "    graphs_labelled, \"custom_dataset_classification_labelled\", folder=\"./datasets\"\n",
+    ")\n",
     "\n",
     "# perform some sanity checks\n",
-    "print('There are {} graphs'.format(len(graphs_labelled.graphs)))\n",
-    "print('There are {} features per node'.format(graphs_labelled.get_n_node_features()))"
+    "print(\"There are {} graphs\".format(len(graphs_labelled.graphs)))\n",
+    "print(\"There are {} features per node\".format(graphs_labelled.get_n_node_features()))"
    ]
   },
   {
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,87 +158,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:hcga.extraction:Extracting features from 100 graphs (we disabled 0 graphs).\n",
-      "INFO:hcga.extraction:Computing features for 100 graphs:\n",
-      "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done   5 tasks      | elapsed:    5.5s\n",
-      "[Parallel(n_jobs=4)]: Done  10 tasks      | elapsed:    7.5s\n",
-      "[Parallel(n_jobs=4)]: Done  17 tasks      | elapsed:   10.0s\n",
-      "[Parallel(n_jobs=4)]: Done  24 tasks      | elapsed:   13.2s\n",
-      "[Parallel(n_jobs=4)]: Done  33 tasks      | elapsed:   17.0s\n",
-      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:   20.5s\n",
-      "[Parallel(n_jobs=4)]: Done  53 tasks      | elapsed:   25.3s\n",
-      "[Parallel(n_jobs=4)]: Done  64 tasks      | elapsed:   29.1s\n",
-      "[Parallel(n_jobs=4)]: Done  77 tasks      | elapsed:   33.8s\n",
-      "[Parallel(n_jobs=4)]: Done  90 tasks      | elapsed:   38.5s\n",
-      "[Parallel(n_jobs=4)]: Done 100 out of 100 | elapsed:   42.0s finished\n",
-      "INFO:hcga.extraction:1093 feature extracted.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load and extract features for the primary dataset with training labels\n",
-    "h.load_data('./datasets/custom_dataset_classification_labelled.pkl')\n",
-    "h.extract(mode='fast', n_workers=4, timeout=5)"
+    "h.load_data(\"./datasets/custom_dataset_classification_labelled.pkl\")\n",
+    "h.extract(mode=\"fast\", n_workers=4, timeout=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:numexpr.utils:Note: NumExpr detected 12 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.\n",
-      "INFO:numexpr.utils:NumExpr defaulting to 8 threads.\n",
-      "INFO:hcga.analysis:... Using Xgboost classifier ...\n",
-      "INFO:hcga.analysis:1093 total features\n",
-      "INFO:hcga.analysis:0 graphs were removed for more than 0.3 fraction of bad features\n",
-      "INFO:hcga.analysis:1018 valid features\n",
-      "INFO:hcga.analysis:1018 with interpretability 1\n",
-      "INFO:hcga.analysis:Counts of graphs/label: \n",
-      "0.0    50\n",
-      "1.0    50\n",
-      "Name: label, dtype: int64\n",
-      "INFO:hcga.analysis:Using 10 splits\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Accuracy: 0.96 +/- 0.049\n",
-      "INFO:hcga.analysis:Now using a reduced set of 100 features with < 0.9 correlation.\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 0.9 ---\n",
-      "INFO:hcga.analysis:Fold accuracy: --- 1.0 ---\n",
-      "INFO:hcga.analysis:Accuracy with reduced set: 0.98 +/- 0.04\n",
-      "INFO:hcga.analysis:Fitting model to all data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "h.analyse_features(save_model=True,plot=False, results_folder='./results/test')"
+    "h.analyse_features(save_model=True, plot=False, results_folder=\"./results/test\")"
    ]
   },
   {
@@ -251,18 +187,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this cell is generating some synthetic graph dataset with node features. \n",
+    "# this cell is generating some synthetic graph dataset with node features.\n",
     "\n",
     "\n",
-    "#defining limits on number of nodes\n",
+    "# defining limits on number of nodes\n",
     "n_min = 20\n",
     "n_max = 50\n",
     "\n",
-    "#number of graphs\n",
+    "# number of graphs\n",
     "num_g = 20\n",
     "\n",
     "# number of node features - in this example I will generate random node features that aren't useful for classifcation\n",
@@ -279,75 +215,71 @@
     "p_max = 0.5\n",
     "\n",
     "# adding 50 random graphs (label 0)\n",
-    "for i in range(int(num_g/2)):\n",
-    "    rand_n = np.random.randint(n_min,n_max)\n",
-    "    rand_p = np.random.randint(int(p_min*100),int(p_max*100))/100   \n",
-    "    \n",
-    "    g = nx.fast_gnp_random_graph(rand_n,rand_p)    \n",
+    "for i in range(int(num_g / 2)):\n",
+    "    rand_n = np.random.randint(n_min, n_max)\n",
+    "    rand_p = np.random.randint(int(p_min * 100), int(p_max * 100)) / 100\n",
+    "\n",
+    "    g = nx.fast_gnp_random_graph(rand_n, rand_p)\n",
     "    g.label = 0\n",
     "\n",
-    "    node_feat_matrix = np.random.random((rand_n,n_nf))\n",
+    "    node_feat_matrix = np.random.random((rand_n, n_nf))\n",
     "\n",
-    "    for i,node in enumerate(g.nodes):\n",
-    "        g.nodes[node]['features'] = node_feat_matrix[i,:]\n",
-    "    \n",
-    "    #graphs.append(g)\n",
-    "    \n",
-    "    graphs.append(nx.to_numpy_array(g)*2)\n",
-    "    \n",
+    "    for i, node in enumerate(g.nodes):\n",
+    "        g.nodes[node][\"features\"] = node_feat_matrix[i, :]\n",
+    "\n",
+    "    # graphs.append(g)\n",
+    "\n",
+    "    graphs.append(nx.to_numpy_array(g) * 2)\n",
+    "\n",
     "    node_features.append(node_feat_matrix)\n",
-    "    \n",
+    "\n",
     "\n",
     "# setting limits on number of edges to add per node\n",
     "m_min = 1\n",
     "m_max = 5\n",
     "\n",
     "# adding 50  powerlaw cluster graphs (label 1)\n",
-    "for i in range(int(num_g/2)):\n",
-    "    rand_n = np.random.randint(n_min,n_max)\n",
-    "    rand_p = np.random.randint(int(p_min*100),int(p_max*100))/100   \n",
-    "    rand_m = np.random.randint(m_min,m_max)\n",
-    "    \n",
+    "for i in range(int(num_g / 2)):\n",
+    "    rand_n = np.random.randint(n_min, n_max)\n",
+    "    rand_p = np.random.randint(int(p_min * 100), int(p_max * 100)) / 100\n",
+    "    rand_m = np.random.randint(m_min, m_max)\n",
+    "\n",
     "    g = nx.powerlaw_cluster_graph(rand_n, rand_m, rand_p)\n",
     "    g.label = 1\n",
     "\n",
-    "    node_feat_matrix = np.random.random((rand_n,n_nf))\n",
-    "    \n",
-    "    for i,node in enumerate(g.nodes):\n",
-    "        g.nodes[node]['features'] = node_feat_matrix[i,:]\n",
-    "        \n",
-    "    #graphs.append(g)\n",
-    "    \n",
-    "    graphs.append(nx.to_numpy_array(g)*2)\n",
-    "    node_features.append(node_feat_matrix)\n",
-    "\n"
+    "    node_feat_matrix = np.random.random((rand_n, n_nf))\n",
+    "\n",
+    "    for i, node in enumerate(g.nodes):\n",
+    "        g.nodes[node][\"features\"] = node_feat_matrix[i, :]\n",
+    "\n",
+    "    # graphs.append(g)\n",
+    "\n",
+    "    graphs.append(nx.to_numpy_array(g) * 2)\n",
+    "    node_features.append(node_feat_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 20 graphs in the unlabelled dataset\n",
-      "There are 3 features per node\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create graph collection object\n",
     "graphs_unlabelled = GraphCollection()\n",
-    "graphs_unlabelled.add_graph_list(graphs,node_features) # loaded without the labels\n",
+    "graphs_unlabelled.add_graph_list(graphs, node_features)  # loaded without the labels\n",
     "\n",
     "# save the unlabelled dataset\n",
-    "save_dataset(graphs_unlabelled, 'custom_dataset_classification_unlabelled', folder='./datasets')\n",
+    "save_dataset(\n",
+    "    graphs_unlabelled, \"custom_dataset_classification_unlabelled\", folder=\"./datasets\"\n",
+    ")\n",
     "\n",
     "# perform some sanity checks\n",
-    "print('There are {} graphs in the unlabelled dataset'.format(len(graphs_unlabelled.graphs)))\n",
-    "print('There are {} features per node'.format(graphs_unlabelled.get_n_node_features()))"
+    "print(\n",
+    "    \"There are {} graphs in the unlabelled dataset\".format(\n",
+    "        len(graphs_unlabelled.graphs)\n",
+    "    )\n",
+    ")\n",
+    "print(\"There are {} features per node\".format(graphs_unlabelled.get_n_node_features()))"
    ]
   },
   {
@@ -359,48 +291,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:hcga.extraction:Extracting features from 20 graphs (we disabled 0 graphs).\n",
-      "INFO:hcga.extraction:Computing features for 20 graphs:\n",
-      "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done   5 tasks      | elapsed:    2.4s\n",
-      "[Parallel(n_jobs=4)]: Done  10 tasks      | elapsed:    4.5s\n",
-      "[Parallel(n_jobs=4)]: Done  16 out of  20 | elapsed:    7.0s remaining:    1.8s\n",
-      "[Parallel(n_jobs=4)]: Done  20 out of  20 | elapsed:    8.4s finished\n",
-      "INFO:hcga.extraction:1093 feature extracted.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# extract features for the secondary dataset with no labels\n",
-    "h.load_data('./datasets/custom_dataset_classification_unlabelled.pkl') # set prediction graphs to True\n",
-    "h.extract(mode='fast', n_workers=4, timeout=20) # set prediction set to True\n"
+    "h.load_data(\n",
+    "    \"./datasets/custom_dataset_classification_unlabelled.pkl\"\n",
+    ")  # set prediction graphs to True\n",
+    "h.extract(mode=\"fast\", n_workers=4, timeout=20)  # set prediction set to True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:hcga.analysis:1093 total features\n",
-      "INFO:hcga.analysis:0 graphs were removed for more than 0.3 fraction of bad features\n",
-      "INFO:hcga.analysis:1017 valid features\n",
-      "INFO:hcga.analysis:1017 with interpretability 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "h.analyse_features(plot=False, trained_model='./results/test/fitted_model', results_folder='./results/test')"
+    "h.analyse_features(\n",
+    "    plot=False,\n",
+    "    trained_model=\"./results/test/fitted_model\",\n",
+    "    results_folder=\"./results/test\",\n",
+    ")"
    ]
   },
   {
@@ -412,56 +324,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    y_prediction\n",
-      "0            0.0\n",
-      "1            0.0\n",
-      "2            0.0\n",
-      "3            0.0\n",
-      "4            0.0\n",
-      "5            0.0\n",
-      "6            0.0\n",
-      "7            0.0\n",
-      "8            0.0\n",
-      "9            0.0\n",
-      "10           1.0\n",
-      "11           1.0\n",
-      "12           1.0\n",
-      "13           1.0\n",
-      "14           1.0\n",
-      "15           1.0\n",
-      "16           1.0\n",
-      "17           1.0\n",
-      "18           1.0\n",
-      "19           1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "predictions = pd.read_csv('./results/test/prediction_results.csv',index_col=0)\n",
+    "predictions = pd.read_csv(\"./results/test/prediction_results.csv\", index_col=0)\n",
     "print(predictions)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -480,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
