--- a/examples/notebooks/example_1_classification_synthetic.ipynb
+++ b/examples/notebooks/example_1_classification_synthetic.ipynb
@@ -227,7 +227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -241,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
